--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 
 .DS_Store
 *.licenseheader
-obj/Debug/DesignTimeResolveAssemblyReferences.cache
-obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+obj/Debug
