--- a/NMEA.csproj
+++ b/NMEA.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\NUnit3TestAdapter.3.9.0\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\packages\NUnit3TestAdapter.3.9.0\build\net35\NUnit3TestAdapter.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -11,6 +12,8 @@
     <AssemblyName>NMEA</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=3.9.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -60,13 +66,30 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
+    <Compile Include="Types\DMMComponents.cs" />
+    <Compile Include="Types\DMSComponents.cs" />
+    <Compile Include="Types\DMSFormatException.cs" />
+    <Compile Include="Types\DMMFormatException.cs" />
     <Compile Include="Types\Fix3DEnum.cs" />
     <Compile Include="Types\FixSelectionMode.cs" />
+    <Compile Include="Types\GeoAngleFormat.cs" />
+    <Compile Include="Types\GeoAngleFormatOptions.cs" />
     <Compile Include="Types\Longitude.cs" />
     <Compile Include="Types\Latitude.cs" />
     <Compile Include="Types\GeoAngle.cs" />
     <Compile Include="Types\FixQualityEnum.cs" />
     <Compile Include="Types\StatusEnum.cs" />
+    <Compile Include="UnitTest\DMMComponentsUnitTest.cs" />
+    <Compile Include="UnitTest\DMSComponentsUnitTest.cs" />
+    <Compile Include="UnitTest\ExpectedExceptionAttribute.cs" />
+    <Compile Include="UnitTest\FixSelectionModeUnitTest.cs" />
+    <Compile Include="UnitTest\GeoAngleUnitTest.cs" />
+    <Compile Include="UnitTest\INmeaStreamUnitTest.cs" />
+    <Compile Include="UnitTest\LatitudeUnitTest.cs" />
+    <Compile Include="UnitTest\LongitudeUnitTest.cs" />
+    <Compile Include="UnitTest\NmeaReceiverUnitTest.cs" />
+    <Compile Include="UnitTest\NmeaStreamUnitTest.cs" />
+    <Compile Include="UnitTest\StatusEnumUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="InvernessPark.Utilities.NMEA.licenseheader" />
@@ -78,5 +101,12 @@
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\NUnit3TestAdapter.3.9.0\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.3.9.0\build\net35\NUnit3TestAdapter.props'))" />
+  </Target>
 </Project>
